# MindLyfe-Platform

./: # Disaster Recovery Plan  # Wearable Integration Technical Details  .gitignore  APP_FEATURES.md  ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Dockerfile  FEATURES.md  FEATURES_CORE.md  FEATURES_TECHNICAL.md  GITHUB_SETUP_COMPLETE.md  MindLyf Sprint Planning.md  NOTIFICATION_SYSTEM_IMPLEMENTATION.md  QA_SECURITY_ANALYSIS.md  README.md  SECURITY_HARDENING_IMPLEMENTATION.md  SERVICE_COMMUNICATION_GUIDE.md  SYSTEM_OVERVIEW.md  docker-compose.yml  implementation.md  mindlyf_auth.sqlite  test_minor.json  test_therapist.json  test_user.json
.cursor/rules/: code.mdc  mindlyf-compliance.mdc
.github/: pull_request_template.md
.github/issue_templates/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml
Architecture/: README.md
Architecture/AI/: AI_Integration_Architecture_Plan.md  MindLyf_ML_Architecture_For_AI_Features.md
Legal/: README.md  cookie_policy.md  data_privacy_gdpr_policy.md  terms_and_conditions.md
Martha_Product_Research/: MindLyf_AI_Enhanced_RPD.md  MindLyf_Notification_Engagement_Strategy.md  MindLyf_Payment_Processing_Strategy_DPO.md  MindLyf_User_Journeys_and_Interaction_Flows.md  Preliminary_AI_Personalization_Research.md  README.md  Updated MindLyf Platform Requirements 2024.md  platform requirements.md
backend/: COMMUNITY_SERVICE_TEST_SUMMARY.md  INTEGRATION_SUMMARY.md  README-AI-Microservices.md  README-Services-Communication.md  README-next-steps.md  README.md  docker-compose.override.yml  docker-compose.yml  infrastructure-only.yml  package-lock.json  package.json  start-all-services.sh  start-services.sh
backend/ai-service/: .env  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/ai-service/app/: main.py
backend/ai-service/app/api/v1/: api.py
backend/ai-service/app/api/v1/endpoints/: admin.py  health.py  journal.py  lyfbot.py  personalization.py  recommendations.py
backend/ai-service/app/core/: config.py  dependencies.py
backend/ai-service/app/db/: session.py
backend/ai-service/app/models/: README.md  user.py
backend/ai-service/app/schemas/: lyfbot.py
backend/ai-service/app/services/: model_service.py  notification_service.py  openai_service.py  training_service.py
backend/ai-service/app/utils/: compliance.py  encryption.py  notification.py  service_client.py
data-pipeline/: README.md
env-configs/: README.md  ai-service-env.md  all-service-configs.md  api-gateway-env.md  apply-env-configs.sh  auth-service-env.md  chat-service-env.md  community-service-env.md  notification-service-env.md  teletherapy-service-env.md
infrastructure/: README.md
scripts/: README.md  setup-github.sh
(+618 files in other folders)
