[tool.poetry]
name = "mindlyf-ai-service"
version = "0.1.0"
description = "MindLyf AI Personalization Service"
authors = ["MindLyf Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = "^2.0.3"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"
redis = "^4.6.0"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
gunicorn = "^21.2.0"
tenacity = "^8.2.2"
prometheus-client = "^0.17.1"
sentry-sdk = "^1.28.1"
tiktoken = "^0.4.0"
jwt = "^1.3.1"
python-jose = "^3.3.0"
pydantic-settings = "^2.0.2"
langchain = "^0.0.235"
numpy = "^1.25.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true 