[tool.poetry]
name = "mindlyfe-ai-service"
version = "0.1.0"
description = "AI Service for MindLyf Mental Health Platform"
authors = ["MindLyfe Team <support@mindlyfe.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.7"
redis = "^5.0.0"
openai = "^0.28.0"
httpx = "^0.24.1"
celery = "^5.3.4"
tenacity = "^8.2.3"
pandas = "^2.1.0"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
cryptography = "^41.0.3"
prometheus-client = "^0.17.1"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
torch = "^2.0.1"
transformers = "^4.33.1"
sentence-transformers = "^2.2.2"
pymongo = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true